--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "morgan": "^1.10.0",
     "postcss": "^8.2.1",
     "postcss-cli": "^8.3.1",
     "pug": "^3.0.0",
